--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext {
+    support_version = '26.1.0'
+}
+
 buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
