--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,15 @@ dependencies {
     implementation "com.android.support:design:${support_version}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    // Android Architecture Components
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    implementation 'android.arch.persistence.room:rxjava2:1.0.0'
+    kapt 'android.arch.persistence.room:compiler:1.0.0'
+    implementation "android.arch.lifecycle:runtime:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:reactivestreams:1.1.0"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
+
     // reactive stream
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
